# mcp_proxy

./: .gitignore  MANIFEST.in  cli.py  setup.py
gemini_test/.gemini/: settings.json
mcp_proxy/: __init__.py  cli.py  comprehensive_demo.py  proxy.py  pyproject.toml  python_mcp.py  readme.md
mcp_proxy/config_generators/: base.py
mcp_proxy/mcp_proxy/config_generators/: __init__.py  claude.py  gemini.py
